--- a/internal/httpapi/templates/dashboard.tmpl
+++ b/internal/httpapi/templates/dashboard.tmpl
@@ -9,30 +9,7 @@
     <link rel="icon" type="image/svg+xml" href="{{.FaviconDataURI}}" />
   </head>
   <body class="d-flex flex-column min-vh-100 bg-light">
-    <header class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top shadow-sm">
-      <div class="container-fluid">
-        <span class="navbar-brand d-flex align-items-center gap-3">
-          <img id="{{.HeaderLogoImageID}}" src="{{.HeaderLogoDataURI}}" alt="LoopAware logo" width="44" height="44" />
-          <span class="fw-semibold">{{.PageTitle}}</span>
-        </span>
-        <div class="dropdown ms-auto">
-          <button id="{{.SettingsButtonID}}" class="btn btn-outline-light border-0 rounded-circle p-1 d-flex align-items-center justify-content-center" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <span class="visually-hidden">{{.SettingsButtonLabel}}</span>
-            <img id="{{.SettingsAvatarImageID}}" src="" alt="Avatar" class="rounded-circle d-none" width="36" height="36" />
-            <i id="{{.SettingsAvatarFallbackID}}" class="bi bi-person-circle fs-3"></i>
-          </button>
-          <div id="{{.SettingsMenuID}}" class="dropdown-menu dropdown-menu-end">
-            <div class="dropdown-item d-flex align-items-center justify-content-between">
-              <span>{{.ThemeToggleLabel}}</span>
-              <div class="form-check form-switch m-0">
-                <input class="form-check-input" type="checkbox" role="switch" id="{{.SettingsThemeToggleID}}" />
-              </div>
-            </div>
-            <button id="{{.LogoutButtonID}}" class="dropdown-item" type="button">{{.LogoutLabel}}</button>
-          </div>
-        </div>
-      </div>
-    </header>
+    {{template "dashboard_header" .}}
     <main class="flex-grow-1 pt-5 mt-4">
       <div class="container py-4">
         
