--- a/internal/httpapi/templates/widget_test.tmpl
+++ b/internal/httpapi/templates/widget_test.tmpl
@@ -395,5 +395,12 @@
     window.LOOPAWARE_WIDGET_TEST_ENDPOINT = "{{.TestFeedbackEndpoint}}";
   </script>
   <script defer src="{{.WidgetScriptURL}}"></script>
+  <script type="module">
+    import Alpine from "https://cdn.jsdelivr.net/npm/alpinejs@3.13.5/dist/module.esm.js";
+    import { mprFooter } from "https://cdn.jsdelivr.net/gh/MarcoPoloResearchLab/mpr-ui@main/footer.js";
+    window.Alpine = Alpine;
+    window.mprFooter = mprFooter;
+    Alpine.start();
+  </script>
 </body>
 </html>
