--- a/internal/httpapi/templates/widget_test.tmpl
+++ b/internal/httpapi/templates/widget_test.tmpl
@@ -4,12 +4,38 @@
   <meta charset="utf-8">
   <title>{{.PageTitle}}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script>
+    (function() {
+      var THEME_KEYS = [
+        'loopaware_dashboard_theme',
+        'loopaware_public_theme',
+        'loopaware_landing_theme',
+        'loopaware_theme'
+      ];
+      var theme = 'light';
+      for (var index = 0; index < THEME_KEYS.length; index++) {
+        try {
+          var value = localStorage.getItem(THEME_KEYS[index]);
+          if (value === 'dark') {
+            theme = 'dark';
+            break;
+          }
+          if (value === 'light') {
+            theme = 'light';
+          }
+        } catch (error) {
+          theme = 'light';
+        }
+      }
+      document.documentElement.setAttribute('data-bs-theme', theme);
+    }());
+  </script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" {{.BootstrapIconsIntegrity}} crossorigin="anonymous" />
   <link rel="icon" type="image/svg+xml" href="{{.FaviconDataURI}}" />
   <style>{{.SharedStyles}}</style>
 </head>
-<body data-bs-theme="light" class="d-flex flex-column min-vh-100 bg-light" data-site-id="{{.SiteID}}" data-widget-side="{{.PlacementSide}}" data-widget-offset="{{.PlacementOffset}}" data-update-endpoint="{{.WidgetUpdateEndpoint}}">
+<body class="d-flex flex-column min-vh-100" data-site-id="{{.SiteID}}" data-widget-side="{{.PlacementSide}}" data-widget-offset="{{.PlacementOffset}}" data-update-endpoint="{{.WidgetUpdateEndpoint}}">
   {{template "dashboard_header" .Header}}
   <div class="modal fade" id="{{.Header.SettingsModalID}}" tabindex="-1" aria-labelledby="{{.Header.SettingsModalTitleID}}" aria-describedby="{{.Header.SettingsModalContentID}}" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
@@ -175,6 +201,9 @@
             body.classList.remove('bg-dark', 'text-light');
             if (!body.classList.contains('bg-light')) {
               body.classList.add('bg-light');
+            }
+            if (!body.classList.contains('text-dark')) {
+              body.classList.add('text-dark');
             }
           }
         }
