--- a/internal/httpapi/templates/dashboard.tmpl
+++ b/internal/httpapi/templates/dashboard.tmpl
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" {{.BootstrapIconsIntegrityAttr}} crossorigin="anonymous" />
     <link rel="icon" type="image/svg+xml" href="{{.FaviconDataURI}}" />
+    <style>
+      .widget-bottom-offset-input {
+        flex: 0 0 auto;
+        width: 6rem;
+        max-width: 6rem;
+      }
+    </style>
   </head>
   <body class="d-flex flex-column min-vh-100 bg-light">
     {{template "dashboard_header" .}}
@@ -138,7 +145,7 @@
                     <label class="form-label" for="{{.WidgetBottomOffsetInputID}}">{{.WidgetPlacementBottomOffsetLabel}}</label>
                     <div class="input-group">
                       <button id="{{.WidgetBottomOffsetDecreaseButtonID}}" type="button" class="btn btn-outline-secondary" aria-label="{{.WidgetBottomOffsetDecreaseAriaLabel}}">{{.WidgetBottomOffsetDecreaseLabel}}</button>
-                      <input type="number" class="form-control text-end" id="{{.WidgetBottomOffsetInputID}}" min="{{.WidgetBottomOffsetMin}}" max="{{.WidgetBottomOffsetMax}}" step="1" aria-describedby="{{.WidgetBottomOffsetHelpID}}" />
+                      <input type="number" class="form-control text-end widget-bottom-offset-input" id="{{.WidgetBottomOffsetInputID}}" min="{{.WidgetBottomOffsetMin}}" max="{{.WidgetBottomOffsetMax}}" step="1" aria-describedby="{{.WidgetBottomOffsetHelpID}}" />
                       <button id="{{.WidgetBottomOffsetIncreaseButtonID}}" type="button" class="btn btn-outline-secondary" aria-label="{{.WidgetBottomOffsetIncreaseAriaLabel}}">{{.WidgetBottomOffsetIncreaseLabel}}</button>
                     </div>
                     <div class="form-text" id="{{.WidgetBottomOffsetHelpID}}">{{.WidgetPlacementBottomOffsetHelp}}</div>
