--- a/internal/httpapi/templates/widget_test.tmpl
+++ b/internal/httpapi/templates/widget_test.tmpl
@@ -73,23 +73,29 @@
               </p>
               <p class="text-muted mb-4">Use the theme switch in the navigation bar to verify light and dark modes. Interactions with this widget are stored with the selected site.</p>
               <form id="widget-test-form" class="border rounded p-3 bg-body-secondary">
-                <fieldset class="mb-3">
-                  <legend class="fs-6 mb-2">Bubble placement</legend>
-                  <div class="form-check">
-                    <input class="form-check-input" type="radio" name="widget-test-side" id="widget-test-side-left" value="left">
-                    <label class="form-check-label" for="widget-test-side-left">Left</label>
+                <div class="row g-3 align-items-start mb-3">
+                  <div class="col-12 col-lg-6">
+                    <fieldset class="mb-0">
+                      <legend class="fs-6 mb-2">Bubble placement</legend>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="widget-test-side" id="widget-test-side-left" value="left">
+                        <label class="form-check-label" for="widget-test-side-left">Left</label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="widget-test-side" id="widget-test-side-right" value="right">
+                        <label class="form-check-label" for="widget-test-side-right">Right</label>
+                      </div>
+                    </fieldset>
                   </div>
-                  <div class="form-check">
-                    <input class="form-check-input" type="radio" name="widget-test-side" id="widget-test-side-right" value="right">
-                    <label class="form-check-label" for="widget-test-side-right">Right</label>
-                  </div>
-                </fieldset>
-                <div class="mb-3">
-                  <label class="form-label" for="widget-test-bottom-offset">Bottom offset (0-240 px)</label>
-                  <div class="input-group">
-                    <button id="widget-test-offset-decrease" type="button" class="btn btn-outline-secondary" aria-label="Decrease bottom offset by 10 pixels">-10 px</button>
-                    <input class="form-control text-end" type="number" id="widget-test-bottom-offset" min="0" max="240" step="1" required>
-                    <button id="widget-test-offset-increase" type="button" class="btn btn-outline-secondary" aria-label="Increase bottom offset by 10 pixels">+10 px</button>
+                  <div class="col-12 col-lg-6">
+                    <div class="d-flex flex-column gap-2">
+                      <label class="form-label mb-0" for="widget-test-bottom-offset">Bottom offset (0-240 px)</label>
+                      <div class="input-group">
+                        <button id="widget-test-offset-decrease" type="button" class="btn btn-outline-secondary" aria-label="Decrease bottom offset by 10 pixels">-10 px</button>
+                        <input class="form-control text-end" type="number" id="widget-test-bottom-offset" min="0" max="240" step="1" required>
+                        <button id="widget-test-offset-increase" type="button" class="btn btn-outline-secondary" aria-label="Increase bottom offset by 10 pixels">+10 px</button>
+                      </div>
+                    </div>
                   </div>
                 </div>
                 <div class="d-flex align-items-center gap-3">
